Add files for EAPSUP-143 including build artifacts